# stash

./: .dockerignore  Cargo.toml  Dockerfile  PKGBUILD  stash-example.toml  stash.toml  unarchive.sql
package/archlinux/: PKGBUILD  stash.service  sysusers-stash.conf
src/: app.rs  config.rs  data.rs  main.rs  session.rs
static/: style.css
templates/: add.html  base.html  index.html
